--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,7 +21,7 @@
         border-radius: 1rem;
         padding: 1.2em;
 
-        > *{
+        > :nth-child(n+2){  
             margin-top: 20px;
         }
 
@@ -34,10 +34,7 @@
 
             &:hover{
                 cursor: pointer;
-                transition: all 3s ease-in;
-                
-                
-                
+                //transition: all 3s ease-in;
                 &::after{
                     content: '';
                     position: absolute;
@@ -47,7 +44,7 @@
                     height: 100%;
                     background: hsl(178, 100%, 50%, 0.5);
                     border-radius: 1rem;
-                    transition: all 2s;
+                    //transition: all 2s;
                   
                     
                     
@@ -138,7 +135,6 @@
                 span{
                     color: u.$soft-blue;
 
-                   
                 }
             }
         }
@@ -154,4 +150,6 @@
             
         }
     }
+    @include u.media-mobile-just-card;
 }
+
